# esp32_playground

./: enclosure.scad
blabla/: Makefile  README.md  sdkconfig.defaults
blabla/main/: CMakeLists.txt  bt.c  bt.h  bt_gatt_read_id.c  bt_gatt_read_id.h  bt_helpers.h  bt_led.c  bt_led.h  c3_zero_led.c  c3_zero_led.h  main.c
blapresence/: CMakeLists.txt  Makefile  README.md
blapresence/main/: bt.c  bt.h  bt_gatt_read_id.c  bt_gatt_read_id.h  bt_helpers.h  bt_hid.c  bt_hid.h  c3_zero_led.c  custom_panic.c  custom_panic.h  main.c
blawifi/: CMakeLists.txt  README.md  sdkconfig.overrides
blawifi/main/: CMakeLists.txt  btn_mon.c  btn_mon.h  c3_zero_led.c  c3_zero_led.h  idf_component.yml  main.c  mqtt.c  mqtt.h  provision_reset.c  provision_reset.h  wifi.c  wifi.h  wifi_provision.c  wifi_provision.h
blawifi/main/common/: btn_mon.c  btn_mon.h  c3_zero_led.c  c3_zero_led.h
blawifi/main/provisioning/: reset.c  reset.h  wifi.c  wifi.h
blawifi/main/wifi_provision_www/: done.html
blawifi_provision/: CMakeLists.txt  sdkconfig.defaults
blawifi_provision/main/: CMakeLists.txt  main.c  wifi_provision.c  wifi_provision.h
blawifi_provision/main/wifi_provision_www/: index.html
c3-zero-button/: CMakeLists.txt  README.md
c3-zero-button/main/: CMakeLists.txt  btn_mon.c  btn_mon.h  main.c
gpio-pir/: CMakeLists.txt  README.md
gpio-pir/main/: main.c
